[front-end][admin page] Fix button alignment

--- a/public/components/admin/admin.css
+++ b/public/components/admin/admin.css
@@ -2,6 +2,14 @@
 	margin-top: 25px;
 }
 
+.margin-top-50  {
+	margin-top: 50px;
+}
+
+.margin-right-25  {
+	margin-right: 25px;
+}
+
 .con_text {
 	font-size: 150%;
 }
